--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -3,11 +3,17 @@
 <head>
 <title>Page Title</title>
 </head>
+
 <body>
 
 <form>
+<label for="playlist_name">Playlist name!</label><br>
+<input type="text" value = "RECENT LIKES">
+<label for="playlist_name">Playlist length!! </label><br>
+<input type="text" value = "100">    
 <input type="submit" value="make it!">
 </form>
 
 </body>
+
 </html> 
