--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -8,9 +8,9 @@
 
 <form>
 <label for="playlist_name">Playlist name!</label><br>
-<input type="text" value = "RECENT LIKES">
+<input type="text" value = "RECENT LIKES"><br>
 <label for="playlist_name">Playlist length!! </label><br>
-<input type="text" value = "100">    
+<input type="text" value = "100"><br>    
 <input type="submit" value="make it!">
 </form>
 
