--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -6,6 +6,8 @@
 
 <body>
 
+<h1> Put your playlist's name and length here! </h1>
+
 <form>
 <label for="playlist_name">Playlist name!</label><br>
 <input type="text" value = "RECENT LIKES :)"><br><br>
