changed the html form tag

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -8,7 +8,7 @@
 
 <h1> Put your playlist's name and length here! </h1>
 
-<form>
+<form action = /success method = "post">
 <label for="playlist_name">Playlist name!</label><br>
 <input type="text" value = "RECENT LIKES :)"><br><br>
 <label for="playlist_length">Playlist length!! </label><br>
