--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -10,9 +10,9 @@
 
 <form action = /setPlaylist method = "post">
 <label for="playlist_name">Playlist name!</label><br>
-<input type="text" value = "RECENT LIKES :)"><br><br>
+<input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
 <label for="playlist_length">Playlist length!! </label><br>
-<input type="text" value = "100"><br>    
+<input type="text" name = "playlist_length" value = "100"><br>    
 <input type="submit" value="make it!">
 </form>
 
