--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -8,7 +8,7 @@
 
 <h1> Put your playlist's name and length here! </h1>
 
-<form action = /setPlaylist method = "post">
+<form action = /userinput method = "post">
 <label for="playlist_name">Playlist name!</label><br>
 <input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
 <label for="playlist_length">Playlist length!! </label><br>
