--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -12,7 +12,7 @@
 <form action = /userinput method = "post">
 <label for="playlist_name">Playlist name!</label><br>
 <input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
-<label for="playlist_length">Playlist length!! </label><br>
+<label for="playlist_length">Playlist length!! (Max 100) </label><br>
 <input type="text" name = "playlist_length" value = "100"><br>    
 <input type="submit" value="make it!">
 </form>
