--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -13,7 +13,9 @@
 <label for="playlist_name">Playlist name!</label><br>
 <input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
 <label for="playlist_length">Playlist length!! (Max 100) </label><br>
-<input type="text" name = "playlist_length" value = "100"><br>    
+<input type="number" name = "playlist_length" value = "100"><br>    
+<label for="update_frequency">Update it every __ hour(s) </label><br>
+<input type="number" name = "update_frequency" value = "4"><br> 
 <input type="submit" value="make it!">
 </form>
 {% endblock %}
