--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
   <a class="navbar-brand" href="#">
       <img src="/static/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      SPG!
+      Spotify Playlist Generator!
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
