--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
   <a class="navbar-brand" href="#">
-      <img src="/static/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="/static/logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
       Spotify Playlist Generator!
     </a>
 
