--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -24,11 +24,15 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Playlist Maker</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('userinput') }}">Playli$t Maker</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link" href="{{ url_for('logout') }}"> Stop This! </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('aboutme') }}">About Me :)</a>
         </li>
 
     </div>
