--- a/api/templates/aboutme.html
+++ b/api/templates/aboutme.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
+{% block content %}
 <h1>
     Hi! My name is Amar Singh, I made this!. I'm a programmer and comedian.
 </h1>
+{% endblock %}  
 </body>
