cleaning up htmls and testing insta link

--- a/api/templates/aboutme.html
+++ b/api/templates/aboutme.html
@@ -7,8 +7,11 @@
 
 <body>
 {% block content %}
-<h1>
-    Hi! My name is Amar Singh, I made this!. I'm a programmer and comedian.
-</h1>
+<h2>
+    Hi! My name is Amar Singh, I made this! I'm a programmer and comedian.
+    I hope you love your playlist and me
+    Here's my <a href = "https://www.instagram.com/realexciting/"> Instagram! <a>
+    Here's my Github!
+</h2>
 {% endblock %}  
 </body>
