--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -28,11 +28,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('logout') }}"> Stop This! </a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('stopupdating') }}"> Stop Updating My Playlist </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('aboutme') }}">About Me :)</a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('aboutme') }}">About Me :)</a>
         </li>
 
     </div>
