needed a placeholder for route "stop"

--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -28,7 +28,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ url_for('stopupdating') }}"> Stop Updating My Playlist </a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('stop') }}"> Stop Updating My Playlist </a>
         </li>
 
         <li class="nav-item">
