finished linking aboutme

--- a/api/templates/aboutme.html
+++ b/api/templates/aboutme.html
@@ -8,10 +8,10 @@
 <body>
 {% block content %}
 <h2>
-    Hi! My name is Amar Singh, I made this! I'm a programmer and comedian.
-    I hope you love your playlist and me
-    Here's my <a href = "https://www.instagram.com/realexciting/"> Instagram! <a>
-    Here's my Github!
+    Hi! My name is Amar Singh, I made this! I'm a programmer and comedian. <br>
+    I hope you love your playlist and me <br>
+    Here's my <a href = "https://www.instagram.com/realexciting/"> Instagram! </a>
+    Here's my <a href = "https://github.com/2am2"> Github! </a>
 </h2>
 {% endblock %}  
 </body>
