--- a/api/templates/aboutme.html
+++ b/api/templates/aboutme.html
@@ -10,7 +10,7 @@
 <h2>
     Hi! My name is Amar Singh, I made this! I'm a programmer and comedian. <br>
     I hope you love your playlist and me <br>
-    Here's my <a href = "https://www.instagram.com/realexciting/"> Instagram! </a>
+    Here's my <a href = "https://www.instagram.com/realexciting/"> Instagram! </a><br>
     Here's my <a href = "https://github.com/2am2"> Github! </a>
 </h2>
 {% endblock %}  
