--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -10,7 +10,7 @@
 
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<nav class="navbar navbar-light"  style= "background-color: #fde3e9;" >
+<nav class="navbar"  style= "background-color: #fde3e9;" >
   <div class="container-fluid">
   <a class="navbar-brand" href="#">
       <img src="/static/logo.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
