simplifying to work with db and <100 tracks

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -16,10 +16,10 @@
     <form action = /userinput method = "post">
     <label for="playlist_name">Playlist name!</label><br>
     <input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
-    <label for="playlist_length">Playlist length! </label><br>
+    <label for="playlist_length">Playlist length! (max 100) </label><br>
     <input type="number" name = "playlist_length" value = "100"><br><br>    
-    <label for="update_frequency">Update it every __ hours </label><br>
-    <input type="number" name = "update_frequency" value = "4"><br><br> 
+    <!-- <label for="update_frequency">Update it every __ hours </label><br>
+    <input type="number" name = "update_frequency" value = "4"><br><br>  -->
     <input type="submit" value="make it!">
     </form>
 {% endblock %}
