postgres db working. merging w main

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -7,11 +7,11 @@
 
 <body>
 {% block content %}
-<h2> Input your playlist's name, length, and how often it should update!</h2>
+<h2> Input your playlist's name and length!</h2>
 <h4> 
     This playlist will pull up your most recently liked tracks on Spotify, so you can save it to ur phone!<br>
     Great for situations where you don't have data or wifi!<br>
-    If you recreate your playlist under a different name, you'll have to save it again!<br>
+    Auto - updating of the playlist coming soon!<br>
 </h4>
     <form action = /userinput method = "post">
     <label for="playlist_name">Playlist name!</label><br>
