--- a/api/templates/success.html
+++ b/api/templates/success.html
@@ -6,9 +6,13 @@
 </head>
 
 <body>
-<h1>
+
+<h2>
 {% block content %}
+Your Playlist
 {{msg}}
+Is All Set! 
 {% endblock %} 
-</h1>
+
+</h2>
 </body>
