--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -15,9 +15,9 @@
 </h4>
     <form action = /userinput method = "post">
     <label for="playlist_name">Playlist name!</label><br>
-    <input type="text" name="playlist_name" value = "RECENT LIKES :)"><br><br>
+    <input type="text" name="playlist_name" value = "{{name}}"><br><br>
     <label for="playlist_length">Playlist length!</label><br>
-    <input type="number" name = "playlist_length" value = "100"><br><br>    
+    <input type="number" name = "playlist_length" value = "{{length}}"><br><br>    
     <!-- <label for="update_frequency">Update it every __ hours </label><br>
     <input type="number" name = "update_frequency" value = "4"><br><br>  -->
     <input type="submit" value="make it!">
