--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -27,9 +27,9 @@
           <a class="nav-link active" aria-current="page" href="{{ url_for('userinput') }}">Playli$t Maker</a>
         </li>
 
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{{ url_for('stop') }}"> Stop Updating My Playlist </a>
-        </li>
+        </li> -->
 
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{{ url_for('aboutme') }}">About Me :)</a>
