fixed empty playlist for accounts with <50 likes issue

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -11,6 +11,7 @@
 <h4> 
     This playlist will pull up your most recently liked tracks on Spotify, so you can save it to ur phone!<br>
     Great for situations where you don't have data or wifi!<br>
+    come back here and click "make it" to refresh your playlist<br>
     Auto - updating of the playlist coming soon!<br>
 </h4>
     <form action = /userinput method = "post">
