--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -11,16 +11,15 @@
 <h4> 
     This playlist will pull up your most recently liked tracks on Spotify, so you can save it to ur phone!<br>
     Great for situations where you don't have data or wifi!<br>
-    come back here and click "make it" to refresh your playlist<br>
-    Auto - updating of the playlist coming soon!<br>
+    click "make it" if you want to refresh your existing playlist<br>
 </h4>
     <form action = /userinput method = "post">
     <label for="playlist_name">Playlist name!</label><br>
     <input type="text" name="playlist_name" value = "{{name}}"><br><br>
     <label for="playlist_length">Playlist length!</label><br>
     <input type="number" name = "playlist_length" value = "{{length}}"><br><br>    
-    <!-- <label for="update_frequency">Update it every __ hours </label><br>
-    <input type="number" name = "update_frequency" value = "4"><br><br>  -->
+    <label for="auto_update">Update daily? </label><br>
+    <input type="checkbox" ><br><br> 
     <input type="submit" value="make it!">
     </form>
 {% endblock %}
