--- a/api/templates/maintemp.html
+++ b/api/templates/maintemp.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-<title> Playlist Generator! </title>
+<title> Recent Likes Playlist Generator! </title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <div class="container-fluid">
   <a class="navbar-brand" href="#">
       <img src="/static/logo.jpeg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      Playlist Generator for Spotify!
+      Recent Likes Playlist Generator for Spotify!
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
