auot-update checkbox now taking in data

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -19,7 +19,7 @@
     <label for="playlist_length">Playlist length!</label><br>
     <input type="number" name = "playlist_length" value = "{{length}}"><br><br>    
     <label for="auto_update">Update daily? </label><br>
-    <input type="checkbox" ><br><br> 
+    <input type="checkbox" name = "auto_update" ><br><br> 
     <input type="submit" value="make it!">
     </form>
 {% endblock %}
