remove redirects from auto update so cron job wrks

--- a/api/templates/input.html
+++ b/api/templates/input.html
@@ -18,7 +18,7 @@
     <input type="text" name="playlist_name" value = "{{name}}"><br><br>
     <label for="playlist_length">Playlist length!</label><br>
     <input type="number" name = "playlist_length" value = "{{length}}"><br><br>    
-    <label for="auto_update">Update daily? </label><br>
+    <label for="auto_update">Update daily at 3am? </label><br>
     <input type="checkbox" name = "auto_update" ><br><br> 
     <input type="submit" value="make it!">
     </form>
